# jarvis-command-sdk

./: CLAUDE.md  NOTICE  README.md  pyproject.toml
.github/workflows/: test.yml
jarvis_command_sdk/: __init__.py  agent.py  auth.py  authentication.py  bluetooth_audio.py  button.py  color.py  command.py  context.py  date_keys.py  device_manager.py  device_protocol.py  field_spec.py  forge.py  geocoding.py  inbox.py  interactive.py  parameter.py  process.py  prompt_provider.py  record_summary.py  request.py  response.py  secret.py  settings.py  storage.py
tests/: test_alert.py  test_bluetooth_audio.py  test_callbacks.py  test_color.py  test_command_coverage.py  test_command_data_browser.py  test_geocoding.py  test_inbox.py  test_interactive.py  test_process.py  test_referenceable_items.py  test_sdk.py  test_settings.py  test_storage.py
